Create auth structure, improve oapi_spec, install necessary libraries
