# docs/auth/oapi_spec.yaml
@@ -21,6 +21,11 @@ components:
   responses:
     ServerError:
       description: Internal server error occured. If the issue persists, contact the maintainers.
+  securitySchemes:
+    BearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: sha512-hex
   schemas:
     UserDTO:
       type: object
@@ -39,13 +44,33 @@ components:
           type: string
           format: ObjectId
           example: 507f1f77bcf86cd799439011
+    UserCredentialsDTO:
+      type: object
+      required:
+        - username
+        - password
+      properties:
+        username:
+          type: string
+          example: admin
+        password:
+          type: string
+          example: Password123
+security:
+  - BearerAuth: []
 paths:
   /auth:
     post:
       tags:
         - Auth
+      security: []
       summary: Log-in and create a new Session.
       description: Authenticates the User and creates a new Session.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserCredentialsDTO"
       responses:
         "201":
           description: Authentication success, the response body contains the created sessionToken.
@@ -64,13 +89,6 @@ paths:
         - Auth
       summary: Log-out and delete the Session.
       description: Logs-out the user and deletes the associated Session.
-      parameters:
-        - in: header
-          name: Authorization
-          description: The sessionToken in Bearer format.
-          schema:
-            type: string
-          required: true
       responses:
         "204":
           description: Log-out success, the Session was deleted and the authorization is no longer valid.
@@ -84,13 +102,6 @@ paths:
         - Auth
       summary: Get the current signed-in user.
       description: Based on the authorization credentials, return the user.
-      parameters:
-        - in: header
-          name: Authorization
-          description: The sessionToken in Bearer format.
-          schema:
-            type: string
-          required: true
       responses:
         "200":
           description: Authorization credentials valid, the body contains details about the user.
