# src/lib/auth/authRouter.ts
@@ -1,0 +1,24 @@
+import {
+  NextFunction,
+  Request,
+  RequestHandler,
+  Response,
+  Router,
+} from "express";
+
+const router = Router();
+
+export const authMiddleware: RequestHandler = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  // TODO
+};
+
+router.post(
+  "/auth",
+  async (req: Request, res: Response, next: NextFunction) => {
+    // TODO
+  }
+);
